# deepspeech.pytorch

./: .gitignore  aggmo.py  ctc_example.py  labels.json  labels_ru.json  model.py  multiproc2.py  noise_inject.py  observer.py  pyproject.toml  requirements.txt  test.py  train.py  train.sh  transcribe.py  val.sh
data/: audio_aug.py  audio_loader.py  charnorm.py  common_voice.py  curriculum.py  data_loader.py  data_loader_aug.py  labels.py  librispeech.py  num2word.py  spectrogram_aug.py  ted.py  utils.py
