[tool.poetry]
name = "ds2"
version = "1.2.1"
description = ""
authors = ["Yuri Baburov <burchik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
torch = {path = "dist/torch-1.0.0-cp36-cp36m-manylinux1_x86_64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
