[tool.poetry]
name = "ds2"
version = "1.2.1"
description = ""
authors = ["Yuri Baburov <burchik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.0"
lxml = "^4.3"
dawg = "^0.7.8"
rnnmorph = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
